did the tow langs with mcamara packages

--- a/public/admin/app-assets/css-rtl/my-style.css
+++ b/public/admin/app-assets/css-rtl/my-style.css
@@ -1,14 +1,16 @@
-html, body * {
+html,
+body * {
     font-family: Roboto, Arial, sans-serif !important;
 }
 
 .bg-full-screen-image {
-    background: url('/admin/app-assets/images/sallaty-login-bg.png') !important;
+    background: url('/admin/app-assets/images/sallaty-login-bg.png') no-repeat !important;
     background-size: cover;
+
 }
 
-.dropdown.dropdown-language .dropdown-menu{
-    
+.dropdown.dropdown-language .dropdown-menu {
+
     width: 20px !important;
     height: auto !important;
 }
@@ -18,10 +20,16 @@ html, body * {
     background-color: #2f3640 !important;
     color: #FFF !important;
 }
+
+.nav-item .menu-title {
+    font-size: 16px !important;
+}
+
 /* End Sidebar  */
 
 /* Start Footer Dashboard  */
 .footer.footer-static.footer-light.navbar-border.navbar-shadow {
     background-color: #2f3640 !important;
 }
+
 /* End Footer Dashboard  */
