--- a/public/admin/app-assets/css/my-style.css
+++ b/public/admin/app-assets/css/my-style.css
@@ -18,6 +18,10 @@ html, body * {
     background-color: #2f3640 !important;
     color: #FFF !important;
 }
+
+.nav-item .menu-title {
+    font-size: 14px !important;
+}
 /* End Sidebar  */
 
 /* Start Footer Dashboard  */
