edit admin profile

--- a/public/admin/app-assets/css/my-style.css
+++ b/public/admin/app-assets/css/my-style.css
@@ -17,6 +17,7 @@ html, body * {
 #sidebar * {
     background-color: #2f3640 !important;
     color: #FFF !important;
+    overflow: visible;
 }
 
 .nav-item .menu-title {
