--- a/public/admin/app-assets/css-rtl/my-style.css
+++ b/public/admin/app-assets/css-rtl/my-style.css
@@ -1,35 +1,39 @@
 html,
 body * {
-    font-family: Roboto, Arial, sans-serif !important;
+  font-family: Roboto, Arial, sans-serif !important;
 }
 
 .bg-full-screen-image {
-    background: url('/admin/app-assets/images/sallaty-login-bg.png') no-repeat !important;
-    background-size: cover;
+  background: url('/admin/app-assets/images/sallaty-login-bg.png') no-repeat !important;
+  background-size: cover;
 
 }
 
 .dropdown.dropdown-language .dropdown-menu {
 
-    width: 20px !important;
-    height: auto !important;
+  width: 20px !important;
+  height: auto !important;
 }
 
 /* Start Sidebar  */
 #sidebar * {
-    background-color: #2f3640 !important;
-    color: #FFF !important;
+  background-color: #2f3640 !important;
+  color: #FFF !important;
+}
+
+#span-count {
+  background-color: #ff4358 !important;
 }
 
 .nav-item .menu-title {
-    font-size: 16px !important;
+  font-size: 14px !important;
 }
 
 /* End Sidebar  */
 
 /* Start Footer Dashboard  */
 .footer.footer-static.footer-light.navbar-border.navbar-shadow {
-    background-color: #2f3640 !important;
+  background-color: #2f3640 !important;
 }
 
 /* End Footer Dashboard  */
